fix: fix listDishes endpoint and change to listMeals
