# server/api/tumdev/campus_backend.swagger.json
@@ -315,63 +315,6 @@
         ]
       }
     },
-    "/dish/allDishes": {
-      "get": {
-        "operationId": "Campus_ListDishes",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "canteenId",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "year",
-            "description": "\u003e=2022 until the current year",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
-          },
-          {
-            "name": "week",
-            "description": "range 1 - 53",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
-          },
-          {
-            "name": "day",
-            "description": "range 0 (Monday) - 4 (Friday)",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
-          }
-        ],
-        "tags": [
-          "Campus"
-        ]
-      }
-    },
     "/dish/rating/allDishTags": {
       "get": {
         "operationId": "Campus_ListNameTags",
@@ -570,6 +513,63 @@
             "in": "query",
             "required": false,
             "type": "string"
+          }
+        ],
+        "tags": [
+          "Campus"
+        ]
+      }
+    },
+    "/meal/allMeals": {
+      "get": {
+        "operationId": "Campus_ListMeals",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "canteenId",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "year",
+            "description": "\u003e=2022 until the current year",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "week",
+            "description": "range 1 - 53",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "day",
+            "description": "range 0 (Monday) - 4 (Friday)",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
           }
         ],
         "tags": [
@@ -1324,10 +1324,10 @@
         }
       }
     },
-    "apiListDishesReply": {
+    "apiListMealsReply": {
       "type": "object",
       "properties": {
-        "dish": {
+        "meal": {
           "type": "array",
           "items": {
             "type": "string"
